--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
       100% { text-shadow: 0 0 30px rgba(0, 255, 255, 0.8), 0 0 50px rgba(0, 255, 255, 0.8); }
     }
 
-    /* Стиль для меню с добавлением свечения */
+    /* Стиль для контейнера меню (уменьшен размер) */
     .menu-container {
-      width: 300px;
-      padding: 20px;
+      width: 250px; /* Уменьшили ширину */
+      padding: 15px; /* Уменьшили отступы */
       background-color: rgba(45, 52, 64, 0.8);
       border-radius: 10px;
       text-align: center;
       color: white;
-      z-index: 2; /* Обеспечим, чтобы меню было поверх фона */
+      z-index: 2; 
       box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
       transition: box-shadow 0.3s ease-in-out;
     }
@@ -79,18 +79,18 @@
       box-shadow: 0 0 50px rgba(255, 255, 255, 0.8);
     }
 
-    /* Стиль для кнопок меню */
+    /* Уменьшение кнопок меню */
     .menu-button {
       background-color: rgba(61, 75, 97, 0.8);
-      padding: 10px;
+      padding: 8px; /* Уменьшили отступы */
       border-radius: 8px;
       color: white;
       border: none;
       cursor: pointer;
-      margin-top: 10px;
+      margin-top: 15px; /* Увеличили отступ сверху */
       width: 100%;
       transition: background-color 0.3s, transform 0.3s;
-      z-index: 3; /* Кнопки должны быть сверху */
+      font-size: 14px; /* Уменьшили размер шрифта */
     }
 
     .menu-button:hover {
@@ -98,29 +98,23 @@
       transform: scale(1.05);
     }
 
-    /* Стиль для полей ввода */
-    .input-container {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
+    /* Уменьшение полей ввода */
     .input-field {
-      padding: 10px;
+      padding: 8px; /* Уменьшили отступы */
       background-color: rgba(61, 75, 97, 0.8);
       border-radius: 8px;
       border: none;
       color: white;
-      font-size: 16px;
+      font-size: 14px; /* Уменьшили размер шрифта */
       width: 100%;
       box-sizing: border-box;
       transition: background-color 0.3s;
+      margin-bottom: 10px; /* Добавили отступ снизу для разделения */
     }
 
-    .input-field:focus {
-      background-color: rgba(28, 38, 48, 0.8);
-      outline: none;
+    /* Уменьшение textarea */
+    textarea.input-field {
+      height: 80px; /* Уменьшили высоту текстового поля */
     }
 
     /* Canvas для анимации частиц */
@@ -179,21 +173,6 @@
   <!-- Анимация фона -->
   <canvas id="background"></canvas>
 
-  <!-- Надпись "YAMITEAM" -->
-  <div class="title">
-    <span>S</span>
-    <span>n</span>
-    <span>e</span>
-    <span>a</span>
-    <span>k</span>
-    <span>e</span>
-    <span>r</span>
-    <span>h</span>
-    <span>e</span>
-    <span>a</span>
-    <span>d</span>
-  </div>
-
   <!-- Контейнер меню -->
   <div class="menu-container">
     <div class="input-container">
@@ -208,7 +187,6 @@
       <textarea class="input-field" placeholder="Примечания" id="notesInput"></textarea>
 
       <button class="menu-button" onclick="sendToWhatsApp()">Оформить заказ в WhatsApp</button>
-     
     </div>
   </div>
 
@@ -221,6 +199,9 @@
       <div class="flag-container flag-kz"></div>
     </a>
   </div>
+
+  <!-- Скрытый элемент для фокуса -->
+  <input type="text" id="focusElement" style="position: absolute; visibility: hidden;">
 
   <script>
     const canvas = document.getElementById('background');
@@ -308,50 +289,22 @@
       Примечания: ${notes}
       `;
 
-      const url = `https://wa.me/87075330562?text=${encodeURIComponent(message)}`;
-      window.open(url, '_blank');
+      const url = `http://wa.me/77075330562?text=${encodeURIComponent(message)}`;
+
+      // Скрытие клавиатуры
+      hideKeyboard();  // Добавляем вызов функции для скрытия клавиатуры
+
+      // Открытие WhatsApp с переданным сообщением
+      setTimeout(function() {
+        window.open(url, '_blank');
+      }, 200);  // 200 миллисекунд задержка
     }
 
-    // Функция отправки данных в Telegram
-    function sendToTelegram() {
-      const fio = document.getElementById('fioInput').value;
-      const phone = document.getElementById('phoneInput').value;
-      const address = document.getElementById('addressInput').value;
-      const postAddress = document.getElementById('postAddressInput').value;
-      const postalCode = document.getElementById('postalCodeInput').value;
-      const model = document.getElementById('modelInput').value;
-      const size = document.getElementById('sizeInput').value;
-      const sizeCm = document.getElementById('sizeCmInput').value;
-      const notes = document.getElementById('notesInput').value;
-
-      const message = `
-      ФИО: ${fio}
-      Номер телефона: ${phone}
-      Адрес: ${address}
-      Почтовый адрес: ${postAddress}
-      Почтовый индекс: ${postalCode}
-      Модель кроссовок: ${model}
-      Размер кроссовок: ${size}
-      Размер в см: ${sizeCm}
-      Примечания: ${notes}
-      `;
-
-      const chatId = '@Sneakerhead_admin'; // Ваш Telegram чат ID или username
-      const url = `sendMessage?chat_id=${chatId}&text=${encodeURIComponent(message)}`;
-
-      fetch(url)
-        .then(response => response.json())
-        .then(data => {
-          if (data.ok) {
-            alert('Ваш заказ отправлен в Telegram!');
-          } else {
-            alert('Ошибка при отправке заказа в Telegram');
-          }
-        })
-        .catch(error => {
-          alert('Ошибка при отправке запроса в Telegram');
-          console.error('Error:', error);
-        });
+    // Функция для скрытия клавиатуры
+    function hideKeyboard() {
+      setTimeout(function() {
+        document.getElementById('focusElement').focus(); // Устанавливаем фокус на скрытый элемент
+      }, 100);
     }
   </script>
 </body>
